# sdg4idrr

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/article_ids/: dev.txt  test.txt  train.txt
patch/src/SimCSE/: setup.py
results/roberta-base_0_2e-05/: dev_pred.jsonl
results/roberta-base_1_2e-05/: dev_pred.jsonl
results/roberta-base_2_2e-05/: dev_pred.jsonl
results/roberta-large_0_1e-05/: dev_pred.jsonl
results/roberta-large_1_1e-05/: dev_pred.jsonl
results/roberta-large_2_1e-05/: dev_pred.jsonl
results/run_id/: dev_pred.jsonl
scripts/: build_pdtb3_dataset.py  compile.py  compile.sh  filter_synthetic_argument_pairs.py  generate_candidates_of_arg2.py  rebuild_synthetic_data.py
scripts/preliminary/: investigate_few-shot_performance_of_chatgpt.py
src/first_party_modules/: constants.py  openai_utils.py  progress_bar.py  utils.py
