[tool.poetry]
name = "sdg4idrr"
version = "0.1.0"
description = "Python Virtual Environment of Synthetic Data Generation for Implicit Discourse Relation Recognition"
authors = ["Kazumasa Omura <omura@nlp.ist.i.kyoto-u.ac.jp>"]

packages = [
    { include = "first_party_modules", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
python-dotenv = ">=1.0,<2.0"
scikit-learn = ">=1.2.0,<1.3.0"
# for synthetic data generation
openai = ">=0.27.0,<0.28.0"
tenacity = ">=8.0,<9.0"
tiktoken = ">=0.4.0,<0.5.0"
# for first_party_modules.ml
hydra-core = {"path" = "./src/hydra"}
torch = ">=1.10.0,<1.11.0"
transformers = ">=4.25.0,<4.26.0"
wandb = ">=0.12.0,<0.13.0"
# cf. https://github.com/pytorch/pytorch/issues/69894
setuptools = "59.5.0"

[tool.poetry.dev-dependencies]
jupyterlab = ">=4.0,<5.0"
matplotlib = ">=3.6.0,<3.7.0"
seaborn = ">=0.12,<1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"

# cf. https://docs.astral.sh/ruff/settings/
[tool.ruff]
line-length = 120
target-version = "py39"

# [tool.ruff.format]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "I",  # isort
]
ignore = [
    "E203",  # whitespace before ":"
    # Ruff doesn't enable pycodestyle warnings (W)
    # "W503",  # line break occurred before a binary operator
]

[tool.ruff.lint.isort]
known-first-party = ["first_party_modules"]
